// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutboundIdentifierListsForm renders regular form 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={false}
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={false}
    inputType="text"
    label="Description"
    name="description"
  />
</form>
`;

exports[`OutboundIdentifierListsForm renders, inherited is true, fields should be disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={true}
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={true}
    inputType="text"
    label="Description"
    name="description"
  />
</form>
`;

exports[`OutboundIdentifierListsForm renders, isSaving is true, fields should be disabled 1`] = `
<form
  onSubmit={[Function]}
>
  <InputField
    componentType="input"
    data-automation="nameInput"
    disabled={true}
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    data-automation="descriptionInput"
    disabled={true}
    inputType="text"
    label="Description"
    name="description"
  />
</form>
`;
